added semester pages

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -6,51 +6,71 @@
     <title>
         CSE-Files
     </title>
+    <style>
+        p{
+            max-width: 600px;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-<p>I don't know what to do here</p>
-<br>
-<p>mmhhmmm lesseee</p>
-<br><br><br><br>
+    <div align=center>
+<p>Take Note that Files maybe outdated or not organized to the latest course list. In that case, please email me at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br>Thanks in advance!!</p></div>
+
 <!-- HIGHLIGHTS OF DRIVE -->
 
-<div class="container-5">
-    <table class="resources-table-5" align="center" style="width:90%;">
+<div class="container-5" align=center>
+    <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">( Highlights? )</p>
+        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
       </tr>
       <tr>
         <td>
-          <a href="page-depth-01/CSE-Files.html">
-            CSE Files
+          <a href="page-depth-02/1st-Semester.html">
+           1st Semester
           </a>
         </td>
         <td>
-          <a href="https://drive.google.com/drive/folders/150xxD5x-4sGyC9b83gWFrglAyw25rGNU" target="_blank">
-            Modified Library Questions
-          </a>
-        </td>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1HKkXWBglI1Ffb22k7z7qLFqQqWlEcaI1" target="_blank">
-            Routine Format
-          </a>
-        </td>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa" target="_blank">
-            Curated Book List
-          </a>
-        </td>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt" target="_blank">
-            Programming References
-          </a>
-        </td>
+            <a href="https://drive.google.com/drive/folders/1_mDH5wv5JkGYpzjJ5TCmralmI17VRwFk?usp=drive_link">
+             2nd Semester
+            </a>
+          </td>
+          <td>
+            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
+             1st Semester
+            </a>
+          </td>
+          <td>
+            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
+             1st Semester
+            </a>
+          </td>
+          <td>
+            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
+             1st Semester
+            </a>
+          </td>
+          <td>
+            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
+             1st Semester
+            </a>
+          </td>
+          <td>
+            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
+             1st Semester
+            </a>
+          </td>
+          <td>
+            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
+             1st Semester
+            </a>
+          </td>
       </tr>
     </table>
   </div>
 
-
+  <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
 </body>
 
 </html>
