added some drive links

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -7,7 +7,7 @@
         CSE-Files
     </title>
     <style>
-        p{
+        p {
             max-width: 600px;
             text-align: center;
         }
@@ -16,61 +16,64 @@
 
 <body>
     <div align=center>
-<p>Take Note that Files maybe outdated or not organized to the latest course list. In that case, please email me at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br>Thanks in advance!!</p></div>
+        <p>Take Note that Files maybe outdated or not organized to the latest course list. In that case, please email me
+            at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br>Thanks in advance!!
+        </p>
+    </div>
 
-<!-- HIGHLIGHTS OF DRIVE -->
+    <!-- HIGHLIGHTS OF DRIVE -->
 
-<div class="container-5" align=center>
-    <table class="resources-table-5" align=center style="width:90%;">
-      <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
-      </tr>
-      <tr>
-        <td>
-          <a href="page-depth-02/1st-Semester.html">
-           1st Semester
-          </a>
-        </td>
-        <td>
-            <a href="https://drive.google.com/drive/folders/1_mDH5wv5JkGYpzjJ5TCmralmI17VRwFk?usp=drive_link">
-             2nd Semester
-            </a>
-          </td>
-          <td>
-            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
-             1st Semester
-            </a>
-          </td>
-          <td>
-            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
-             1st Semester
-            </a>
-          </td>
-          <td>
-            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
-             1st Semester
-            </a>
-          </td>
-          <td>
-            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
-             1st Semester
-            </a>
-          </td>
-          <td>
-            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
-             1st Semester
-            </a>
-          </td>
-          <td>
-            <a href="https://drive.google.com/drive/folders/1_qsvHV3ug9KGB_qh3SQQXP10xa7fnmEW?usp=drive_link">
-             1st Semester
-            </a>
-          </td>
-      </tr>
-    </table>
-  </div>
-
-  <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
+    <div class="container-5" align=center>
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
+            </tr>
+            <tr>
+                <td>
+                    <a href="page-depth-02/1st-Semester.html">
+                        1st Semester
+                    </a>
+                </td>
+                <td>
+                    <a href="page-depth-02/2nd-Semester.html">
+                        2nd Semester
+                    </a>
+                </td>
+                <td>
+                    <a href="page-depth-02/3rd-Semester.html">
+                        3rd Semester
+                    </a>
+                </td>
+                <td>
+                    <a href="page-depth-02/4th-Semester.html">
+                        4th Semester
+                    </a>
+                </td>
+                <td>
+                    <a href="page-depth-02/5th-Semester.html">
+                        5th Semester
+                    </a>
+                </td>
+                <td>
+                    <a href="page-depth-02/6th-Semester.html">
+                        6th Semester
+                    </a>
+                </td>
+                <td>
+                    <a href="page-depth-02/7th-Semester.html">
+                        7th Semester
+                    </a>
+                </td>
+                <td>
+                    <a href="page-depth-02/8th-Semester.html">
+                        8th Semester
+                    </a>
+                </td>
+            </tr>
+        </table>
+    </div>
+<div align=center>
+    <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a></div>
 </body>
 
 </html>
