--- a/page-depth-01/page-depth-02/6th-semester.html
+++ b/page-depth-01/page-depth-02/6th-semester.html
@@ -10,8 +10,28 @@
 
 <body>
 
+  <br><br><br>
+  <div align="center">
+    <a href="S02/notes-02.html">S02 Notes</a>
+    <br>
+    <br>
+    <a href="S02/books-02.html">S02 Books</a>
+    <br>
+    <br>
+    <a href="S02/classroom-02.html">S02 Classroom Files</a>
+    <br>
+    <br>
+    <a href="S02/outline-02.html">S02 Outlines</a>
+    <br>
+    <br>
+    <a href="S02/questions-02.html">S02 Questions</a>
+    <br>
+    <br>
+    
+</div>
 
-  <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+  <div align=center>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div>
 </body>
 
 </html>
