--- a/page-depth-01/page-depth-02/1st-Semester.html
+++ b/page-depth-01/page-depth-02/1st-Semester.html
@@ -9,9 +9,27 @@
 </head>
 
 <body>
+    <br><br><br>
+    <div align="center">
+        <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1?usp=drive_link" target="_blank">S01 Notes + <b>Classroom Files</b></a>
+        <br>
+        <br>
+        <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t?usp=drive_link" target="_blank">S01 Books</a>
+        <br>
+        <br>
+        
+        <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm?usp=drive_link" target="_blank">S01 Outlines</a>
+        <br>
+        <br>
+        <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn?usp=drive_link" target="_blank">S01 Questions</a>
+        <br>
+        <br>
+        
+    </div>
 
-
-  <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+    <div align=center>
+        <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+    </div>
 </body>
 
 </html>
