--- a/page-depth-01/page-depth-02/2nd-semester.html
+++ b/page-depth-01/page-depth-02/2nd-semester.html
@@ -9,9 +9,25 @@
 </head>
 
 <body>
+  <br><br><br>
+  <div align="center">
+    <a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link">S02 Notes + <b>Classroom Files</b></a>
+    <br>
+    <br>
+    <a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link">S02 Books</a>
+    <br>
+    <br>
+    <a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link">S02 Outlines</a>
+    <br>
+    <br>
+    <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link">S02 Questions</a>
+    <br>
+    <br>
+    
+</div>
 
-
-  <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+  <div align=center>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div>
 </body>
 
 </html>
