--- a/page-depth-01/page-depth-02/3rd-semester.html
+++ b/page-depth-01/page-depth-02/3rd-semester.html
@@ -9,9 +9,29 @@
 </head>
 
 <body>
+  <br><br><br>
+  <div align="center">
+    <a href="S02/notes-02.html">S03 Notes</a>
+    <br>
+    <br>
+    <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link">S03 Books</a>
+    <br>
+    <br>
+    <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link">S03 Classroom Files</a>
+    <br>
+    <br>
+    <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link">S03 Outlines</a>
+    <br>
+    <br>
+    <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link">S03 Questions</a>
+    <br>
+    <br>
+    
+</div>
 
 
-  <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+  <div align=center>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div>
 </body>
 
 </html>
