re-arranged index
Iframe links don't work still

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -16,9 +16,10 @@
 
 <body>
     <div align=center>
-        <p>Take Note that Files maybe outdated or not organized to the latest course list. In that case, please email me
-            at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br>Thanks in advance!!
+        <p><b>Most of this files are in relevance with CSE-55 batch</b><br><br>Take Note that Files maybe outdated or not organized to the latest course list. In that case, please email me
+            at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br><br>Thanks in advance!!
         </p>
+        
     </div>
 
     <!-- HIGHLIGHTS OF DRIVE -->
@@ -71,6 +72,15 @@
                 </td>
             </tr>
         </table>
+    </div>
+
+    <div align=center>  
+        
+        <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
+            href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+            target="_blank"><small><b>(
+                Link to the Google Drive instead? )</b></small></a></p>
+                <br>
     </div>
 <div align=center>
     <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a></div>
