--- a/page-depth-01/page-depth-02/1st-Semester.html
+++ b/page-depth-01/page-depth-02/1st-Semester.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
     </title>
@@ -10,22 +10,28 @@
 
 <body>
     <br><br><br>
-    <div align="center">
-        <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1?usp=drive_link" target="_blank">S01 Notes + <b>Classroom Files</b></a>
-        <br>
-        <br>
-        <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t?usp=drive_link" target="_blank">S01 Books</a>
-        <br>
-        <br>
-        
-        <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm?usp=drive_link" target="_blank">S01 Outlines</a>
-        <br>
-        <br>
-        <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn?usp=drive_link" target="_blank">S01 Questions</a>
-        <br>
-        <br>
-        
+    <div  class="container-5" align=center>
+        <table class="resources-table-5" align=center style="width:90%;">
+            <tr>
+                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">1st Semester FIles</p>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1?usp=drive_link" target="_blank">S01 Notes + <b>Classroom Files</b></a>
+                </td>
+                <td>
+                    <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t?usp=drive_link" target="_blank">S01 Books</a>
+                </td>
+                <td>
+                    <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm?usp=drive_link" target="_blank">S01 Outlines</a>
+                </td>
+                <td>
+                    <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn?usp=drive_link" target="_blank">S01 Questions</a>
+                </td>
+            </tr>
+        </table>
     </div>
+
 
     <div align=center>
         <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
