--- a/page-depth-01/page-depth-02/3rd-semester.html
+++ b/page-depth-01/page-depth-02/3rd-semester.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
     </title>
@@ -10,25 +10,30 @@
 
 <body>
   <br><br><br>
-  <div align="center">
-    <a href="S02/notes-02.html">S03 Notes</a>
-    <br>
-    <br>
-    <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link">S03 Books</a>
-    <br>
-    <br>
-    <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link">S03 Classroom Files</a>
-    <br>
-    <br>
-    <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link">S03 Outlines</a>
-    <br>
-    <br>
-    <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link">S03 Questions</a>
-    <br>
-    <br>
-    
+  <div  class="container-5" align=center>
+    <table class="resources-table-5" align=center style="width:90%;">
+        <tr>
+            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">3rd Semester FIles</p>
+        </tr>
+        <tr>
+            <td>
+               <a href="https://drive.google.com/drive/folders/1aBzwwuvyk43b1nuIvY_5Ala0K_f8pQ-k?usp=drive_link">S03 Notes</a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link">S03 Books</a>
+            </td>
+            <td>
+                 <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link">S03 Classroom Files</a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link">S03 Outlines</a>
+            </td>
+            <td>
+              <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link">S03 Questions</a>
+            </td>
+        </tr>
+    </table>
 </div>
-
 
   <div align=center>
     <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div>
