--- a/page-depth-01/page-depth-02/6th-semester.html
+++ b/page-depth-01/page-depth-02/6th-semester.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
     </title>
@@ -11,23 +11,23 @@
 <body>
 
   <br><br><br>
-  <div align="center">
-    <a href="S02/notes-02.html">S02 Notes</a>
-    <br>
-    <br>
-    <a href="S02/books-02.html">S02 Books</a>
-    <br>
-    <br>
-    <a href="S02/classroom-02.html">S02 Classroom Files</a>
-    <br>
-    <br>
-    <a href="S02/outline-02.html">S02 Outlines</a>
-    <br>
-    <br>
-    <a href="S02/questions-02.html">S02 Questions</a>
-    <br>
-    <br>
-    
+  <div  class="container-5" align=center>
+    <table class="resources-table-5" align=center style="width:90%;">
+        <tr>
+            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">6th Semester FIles</p>
+        </tr>
+        <tr>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1aCb3nXXFO7aQOhzZqVBB2mATI3jl4e8C?usp=drive_link">S06 Books</a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1aFiQrMjy-UoqNrMIQbFGZ4x1hX1H9Jg7?usp=drive_link">S06 Outlines</a>
+            </td>
+            <td>
+               <a href="https://drive.google.com/drive/folders/1abZooRb9i4kkLdPfmGYOSVEzVIEhV7TK?usp=drive_link">S06 Questions</a> 
+            </td>
+        </tr>
+    </table>
 </div>
 
   <div align=center>
