--- a/page-depth-01/page-depth-02/7th-semester.html
+++ b/page-depth-01/page-depth-02/7th-semester.html
@@ -2,16 +2,36 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
     </title>
 </head>
 
 <body>
+  <br><br><br>
+  <div  class="container-5" align=center>
+    <table class="resources-table-5" align=center style="width:90%;">
+        <tr>
+            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">1st Semester FIles</p>
+        </tr>
+        <tr>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1aL6ZiJJBs8zLlgZ8qcSIg7z_FB88jSqa?usp=drive_link">S07 Books</a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1adHL_WuuOhrKF4fEUbu2Fsnmz-GaCX-L?usp=drive_link">S07 Outlines</a>
+            </td>
+            <td>
+             <a href="https://drive.google.com/drive/folders/1fbhlci6rP_jFwwl9k2oMaOxqOlojjmae?usp=drive_link">S07 Questions</a>   
+            </td>
+           
+        </tr>
+    </table>
+</div>
 
-
-  <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+  <div align=center>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div>
 </body>
 
 </html>
