--- a/index.html
+++ b/index.html
@@ -59,37 +59,7 @@
           <a href="https://b1tranger-coding.blogspot.com/" class="view-more-link-2" target="_blank">View More</a>
       </th>
     </tr>
-  </table>
-
-
-  <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
-
-  <!-- <script src="myscripts.js"></script> -->
-
-  <table border="10" align="center" style="width:100%;">
-    <tr>
-      <td>
-        <div class="container-4">
-          <div class="iframe-wrapper-4">
-            <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
-              href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-              target="_blank"><small><b>(
-                  Link to the Google Drive? )</b></small></a></p>
-            <!-- <div class="iframe-controls-4">
-              <button class="button-4" onclick="zoomIn()">Zoom In</button>
-              <button class="button-4" onclick="zoomOut()">Zoom Out</button>
-              <button class="button-4" onclick="resetZoom()">Reset</button>
-            </div> -->
-            <iframe class="iframe-4"
-              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-              allowfullscreen sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
-            </iframe>
-          </div>
-        </div>
-      </td>
-    </tr>
-  </table>
-
+  </table> 
 
   <!-- HIGHLIGHTS OF DRIVE -->
 
@@ -128,6 +98,36 @@
     </table>
   </div>
 
+  <!-- GOOGLE DRIVE IFRAME (CLAUDE) -->
+
+  <!-- <script src="myscripts.js"></script> -->
+
+  <table border="10" align="center" style="width:100%;">
+    <tr>
+      <td>
+        <div class="container-4">
+          <div class="iframe-wrapper-4">
+            <p align=center style="color:rgba(60, 60, 82, 0.733);">This is was you should expect to see<br>when you open the root Drive link:</p>
+            <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
+              href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+              target="_blank"><small><b>(
+                  Shortcut to oUITS Resources )</b></small></a></p>
+            <!-- <div class="iframe-controls-4">
+              <button class="button-4" onclick="zoomIn()">Zoom In</button>
+              <button class="button-4" onclick="zoomOut()">Zoom Out</button>
+              <button class="button-4" onclick="resetZoom()">Reset</button>
+            </div> -->
+            <iframe class="iframe-4"
+              src="https://drive.google.com/embeddedfolderview?id=1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+              allowfullscreen sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-presentation">
+            </iframe>
+          </div>
+        </div>
+      </td>
+    </tr>
+  </table>
+
+  
   <br>
   <br>
   <br>
