--- a/page-depth-01/page-depth-02/4th-semester.html
+++ b/page-depth-01/page-depth-02/4th-semester.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
     </title>
@@ -10,25 +10,27 @@
 
 <body>
   <br><br><br>
-  <div align="center">
-    <a href="S02/notes-02.html">S02 Notes</a>
-    <br>
-    <br>
-    <a href="S02/books-02.html">S02 Books</a>
-    <br>
-    <br>
-    <a href="S02/classroom-02.html">S02 Classroom Files</a>
-    <br>
-    <br>
-    <a href="S02/outline-02.html">S02 Outlines</a>
-    <br>
-    <br>
-    <a href="S02/questions-02.html">S02 Questions</a>
-    <br>
-    <br>
-    
+  <div  class="container-5" align=center>
+    <table class="resources-table-5" align=center style="width:90%;">
+        <tr>
+            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">4th Semester FIles</p>
+        </tr>
+        <tr>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link">S04 Notes</a>
+            </td>
+            <td>
+              <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link">S04 Books</a>  
+            </td>
+            <td>
+                <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link">S04 Outlines</a>
+            </td>
+            <td>
+              <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link">S04 Questions</a>  
+            </td>
+        </tr>
+    </table>
 </div>
-
 
   <div align=center>
     <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div>
