--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="container-5">
     <table class="resources-table-5" align="center" style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">( Highlights? )</p>
+        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Curated Resources</p>
       </tr>
       <tr>
         <td>
