--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -16,10 +16,12 @@
 
 <body>
     <div align=center>
-        <p><b>Most of this files are in relevance with CSE-55 batch</b><br><br>Take Note that Files maybe outdated or not organized to the latest course list. In that case, please email me
-            at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br><br>Thanks in advance!!
+        <p><b>Most of this files are in relevance with CSE-55 batch</b><br><br>Take Note that Files maybe outdated or
+            not organized to the latest course list. In that case, please email me
+            at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br><br>Thanks in
+            advance!!
         </p>
-        
+
     </div>
 
     <!-- HIGHLIGHTS OF DRIVE -->
@@ -29,6 +31,7 @@
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
             </tr>
+
             <tr>
                 <td>
                     <a href="page-depth-02/1st-Semester.html">
@@ -50,40 +53,45 @@
                         4th Semester
                     </a>
                 </td>
-                <td>
-                    <a href="page-depth-02/5th-Semester.html">
-                        5th Semester
-                    </a>
-                </td>
-                <td>
-                    <a href="page-depth-02/6th-Semester.html">
-                        6th Semester
-                    </a>
-                </td>
-                <td>
-                    <a href="page-depth-02/7th-Semester.html">
-                        7th Semester
-                    </a>
-                </td>
-                <td>
-                    <a href="page-depth-02/8th-Semester.html">
-                        8th Semester
-                    </a>
-                </td>
+            </tr>
+            <tr>
+
+            </tr>
+            <td>
+                <a href="page-depth-02/5th-Semester.html">
+                    5th Semester
+                </a>
+            </td>
+            <td>
+                <a href="page-depth-02/6th-Semester.html">
+                    6th Semester
+                </a>
+            </td>
+            <td>
+                <a href="page-depth-02/7th-Semester.html">
+                    7th Semester
+                </a>
+            </td>
+            <td>
+                <a href="page-depth-02/8th-Semester.html">
+                    8th Semester
+                </a>
+            </td>
             </tr>
         </table>
     </div>
 
-    <div align=center>  
-        
+    <div align=center>
+
         <p align=center><a style="color:rgba(60, 60, 82, 0.733);"
-            href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
-            target="_blank"><small><b>(
-                Link to the Google Drive instead? )</b></small></a></p>
-                <br>
+                href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL"
+                target="_blank"><small><b>(
+                        Link to the Google Drive instead? )</b></small></a></p>
+        <br>
     </div>
-<div align=center>
-    <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a></div>
+    <div align=center>
+        <p id=" bottom"><a style="color: #8c8c8c;" href="../index.html">Go back to index</a>
+    </div>
 </body>
 
 </html>
