default zoom level, fixed broken CSE files
html {zoom: 160%;}

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+
   <title>
     oUITS Resources
   </title>
@@ -66,7 +67,7 @@
   <div class="container-5">
     <table class="resources-table-5" align="center" style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Curated Resources</p>
+        <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Curated Resources</p>
       </tr>
       <tr>
         <td>
