tried to fix zoomed out CSE FIles

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -16,17 +16,18 @@
 
 <body>
     <div align=center>
-        <p><small><b>Most of this files are in relevance with CSE-55 batch</b><br><br>Take Note that Files maybe outdated or
-            not organized to the latest course list. In that case, please email me
-            at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br><br>Thanks in
-            advance!!
-        </small></p>
+        <p><small><b>Most of this files are in relevance with CSE-55 batch</b><br><br>Take Note that Files maybe
+                outdated or
+                not organized to the latest course list. In that case, please email me
+                at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br><br>Thanks in
+                advance!!
+            </small></p>
 
     </div>
 
     <!-- HIGHLIGHTS OF DRIVE -->
 
-    <div class="container-5" align=center style="max-width: 500px;">
+    <div class="container-5" align=center>
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Select your semester</p>
@@ -38,8 +39,6 @@
                         1st Semester
                     </a>
                 </td>
-            </tr>
-            <tr>
                 <td>
                     <a href="page-depth-02/2nd-Semester.html">
                         2nd Semester
@@ -51,23 +50,22 @@
                     <a href="page-depth-02/3rd-Semester.html">
                         3rd Semester
                     </a>
-                </td>
-            </tr>
-            <tr>
+
+
                 <td>
                     <a href="page-depth-02/4th-Semester.html">
                         4th Semester
                     </a>
                 </td>
             </tr>
-
-            <td>
-                <a href="page-depth-02/5th-Semester.html">
-                    5th Semester
-                </a>
-            </td>
-            </tr>
             <tr>
+                <td>
+                    <a href="page-depth-02/5th-Semester.html">
+                        5th Semester
+                    </a>
+                </td>
+
+
                 <td>
                     <a href="page-depth-02/6th-Semester.html">
                         6th Semester
@@ -80,8 +78,7 @@
                         7th Semester
                     </a>
                 </td>
-            </tr>
-            <tr>
+
                 <td>
                     <a href="page-depth-02/8th-Semester.html">
                         8th Semester
