trying to fix other semester pages

--- a/page-depth-01/page-depth-02/2nd-semester.html
+++ b/page-depth-01/page-depth-02/2nd-semester.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles.css">
   <title>
     CSE-Files
@@ -17,17 +18,26 @@
       </tr>
       <tr>
         <td>
-<a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link">S02 Notes +
-      <b>Classroom Files</b></a>
+          <a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link">S02 Notes +
+            <b>Classroom Files</b></a>
         </td>
+      </tr>
+      <tr>
         <td>
-<a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link">S02 Books</a>
+          <a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link">S02
+            Books</a>
         </td>
+      </tr>
+      <tr>
         <td>
-<a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link">S02 Outlines</a>
+          <a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link">S02
+            Outlines</a>
         </td>
+      </tr>
+      <tr>
         <td>
- <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link">S02 Questions</a>
+          <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link">S02
+            Questions</a>
         </td>
       </tr>
     </table>
