--- a/page-depth-01/page-depth-02/7th-semester.html
+++ b/page-depth-01/page-depth-02/7th-semester.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
@@ -19,9 +20,13 @@
             <td>
                 <a href="https://drive.google.com/drive/folders/1aL6ZiJJBs8zLlgZ8qcSIg7z_FB88jSqa?usp=drive_link">S07 Books</a>
             </td>
+          </tr>
+          <tr>
             <td>
                 <a href="https://drive.google.com/drive/folders/1adHL_WuuOhrKF4fEUbu2Fsnmz-GaCX-L?usp=drive_link">S07 Outlines</a>
             </td>
+          </tr>
+          <tr>
             <td>
              <a href="https://drive.google.com/drive/folders/1fbhlci6rP_jFwwl9k2oMaOxqOlojjmae?usp=drive_link">S07 Questions</a>   
             </td>
