--- a/page-depth-01/page-depth-02/8th-semester.html
+++ b/page-depth-01/page-depth-02/8th-semester.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
@@ -19,6 +20,8 @@
             <td>
               <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link">S08 Outlines</a>  
             </td>
+          </tr>
+          <tr>
             <td>
                <a href="https://drive.google.com/drive/folders/1aZEwrtBNlD1QnDkToy9E0I9XqWUulckF?usp=drive_link">S08 Questions</a> 
             </td>
