--- a/page-depth-01/page-depth-02/5th-semester.html
+++ b/page-depth-01/page-depth-02/5th-semester.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
@@ -19,9 +20,13 @@
             <td>
                 <a href="https://drive.google.com/drive/folders/1aJyvQRsfcEg917FK0nRsgBmB6fMgEWGj?usp=drive_link">S05 Books</a>
             </td>
+          </tr>
+          <tr>
             <td>
                 <a href="https://drive.google.com/drive/folders/1aWbKDQZMjZuIMX-7zudQiSweEEl1uQQO?usp=drive_link">S05 Outlines</a>
             </td>
+          </tr>
+          <tr>
             <td>
                <a href="https://drive.google.com/drive/folders/1fWVtEZDkhNz5-aFxeH06LW5am7GL_Hx1?usp=drive_link">S05 Questions</a>
             </td>
