--- a/page-depth-01/page-depth-02/6th-semester.html
+++ b/page-depth-01/page-depth-02/6th-semester.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../styles.css">
     <title>
         CSE-Files
@@ -20,9 +21,13 @@
             <td>
                 <a href="https://drive.google.com/drive/folders/1aCb3nXXFO7aQOhzZqVBB2mATI3jl4e8C?usp=drive_link">S06 Books</a>
             </td>
+          </tr>
+          <tr>
             <td>
                 <a href="https://drive.google.com/drive/folders/1aFiQrMjy-UoqNrMIQbFGZ4x1hX1H9Jg7?usp=drive_link">S06 Outlines</a>
             </td>
+          </tr>
+          <tr>
             <td>
                <a href="https://drive.google.com/drive/folders/1abZooRb9i4kkLdPfmGYOSVEzVIEhV7TK?usp=drive_link">S06 Questions</a> 
             </td>
