removed google drive link suffix

--- a/page-depth-01/page-depth-02/1st-Semester.html
+++ b/page-depth-01/page-depth-02/1st-Semester.html
@@ -82,22 +82,22 @@
         <p class="highlights">1st Semester Files</p>
         <div class="resources-grid">
             <div class="resource-link">
-                <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1?usp=drive_link" target="_blank">
+                <a href="https://drive.google.com/drive/folders/1a4dYGziykFyiGarcowV8rioWyIlAzvA1" target="_blank">
                     S01 Notes + <b>Classroom Files</b>
                 </a>
             </div>
             <div class="resource-link">
-                <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t?usp=drive_link" target="_blank">
+                <a href="https://drive.google.com/drive/folders/1aNeGzO__4pQiyohr7jADZYy7ODM3rC3t" target="_blank">
                     S01 Books
                 </a>
             </div>
             <div class="resource-link">
-                <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm?usp=drive_link" target="_blank">
+                <a href="https://drive.google.com/drive/folders/14ecyN1EotbW1F-5Ulbk_9QbU3F0en8Cm" target="_blank">
                     S01 Outlines
                 </a>
             </div>
             <div class="resource-link">
-                <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn?usp=drive_link" target="_blank">
+                <a href="https://drive.google.com/drive/folders/1bI8ewiui3Cv09A5DWc59RwHADIQB_mnn" target="_blank">
                     S01 Questions
                 </a>
             </div>
