renamed 2nd semester > S02

--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -42,7 +42,7 @@
                     </a>
                 </td>
                 <td>
-                    <a href="page-depth-02/2nd-Semester.html">
+                    <a href="page-depth-02/S02.html">
                         2nd Semester
                     </a>
                 </td>
