renamed all semester forlders and paths

--- a/page-depth-01/page-depth-02/S01.html
+++ b/page-depth-01/page-depth-02/S01.html
@@ -78,6 +78,10 @@
     <title>CSE-Files</title>
 </head>
 <body>
+
+    <!-- Replaced the table layout with CSS Grid Used grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)) to create a responsive grid that automatically adjusts based on screen size Added proper spacing and margins between elements Improved the container sizing using the min() function Removed inline styles and deprecated HTML attributes (like align) Added proper hover states and transitions for better interactivity Made the back link more consistent with the overall design -->
+
+
     <div class="container-5">
         <p class="highlights">1st Semester Files</p>
         <div class="resources-grid">
