--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -37,9 +37,10 @@
 
             <tr>
                 <td>
-                    <a href="page-depth-02/1st-Semester.html">
+                    <a href="page-depth-02/S01.html">
                         1st Semester
                     </a>
+                    <!-- Replaced the table layout with CSS Grid Used grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)) to create a responsive grid that automatically adjusts based on screen size Added proper spacing and margins between elements Improved the container sizing using the min() function Removed inline styles and deprecated HTML attributes (like align) Added proper hover states and transitions for better interactivity Made the back link more consistent with the overall design -->
                 </td>
                 <td>
                     <a href="page-depth-02/S02.html">
@@ -49,40 +50,40 @@
             </tr>
             <tr>
                 <td>
-                    <a href="page-depth-02/3rd-Semester.html">
+                    <a href="page-depth-02/S03.html">
                         3rd Semester
                     </a>
 
 
                 <td>
-                    <a href="page-depth-02/4th-Semester.html">
+                    <a href="page-depth-02/S04.html">
                         4th Semester
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="page-depth-02/5th-Semester.html">
+                    <a href="page-depth-02/S05.html">
                         5th Semester
                     </a>
                 </td>
 
 
                 <td>
-                    <a href="page-depth-02/6th-Semester.html">
+                    <a href="page-depth-02/S06.html">
                         6th Semester
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="page-depth-02/7th-Semester.html">
+                    <a href="page-depth-02/S07.html">
                         7th Semester
                     </a>
                 </td>
 
                 <td>
-                    <a href="page-depth-02/8th-Semester.html">
+                    <a href="page-depth-02/S08.html">
                         8th Semester
                     </a>
                 </td>
