--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -17,11 +17,11 @@
 
 <body>
     <div align=center>
-        <p align="center" style="width: 70%;"><small><b>Most of this files are in relevance with CSE-55
+        <p align="center" style="width: 80%;color: #8c8c8c;"><small><b>Most of this files are in relevance with CSE-55
                     batch</b><br><br>Take Note that Files maybe
                 outdated or
                 not organized to the latest course list. In that case, please email me
-                at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br>Thanks in
+                at b1tranger.01@gmail.com and let me know of the specific shortcomings of this page. <br><br>Thanks in
                 advance!!
             </small></p>
 
