--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -2,41 +2,112 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="../../styles.css">
-    <title>
-        CSE-Files
-    </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+        margin: 0;
+        padding: 20px;
+        font-family: system-ui, -apple-system, sans-serif;
+    }
+
+    .container-5 {
+        background-color: #000000c5;
+        border-radius: 15px;
+        padding: 25px;
+        margin: 20px auto;
+        width: min(90%, 800px);
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    .highlights {
+        color: rgba(240, 248, 255, 0.649);
+        margin: 15px 0;
+        text-align: center;
+    }
+
+    .resources-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 15px;
+        width: 100%;
+        max-width: 500px;
+        margin: 0 auto;
+    }
+
+    .resource-link {
+        background-color: #00000044;
+        border-radius: 8px;
+        padding: 12px;
+        transition: background-color 0.3s ease;
+    }
+
+    .resource-link:hover {
+        background-color: #424242;
+    }
+
+    .resource-link a {
+        color: #ffffffba;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        transition: color 0.3s ease;
+    }
+
+    .resource-link a:hover {
+        color: #ffffff;
+    }
+
+    .back-link {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .back-link a {
+        color: #8c8c8c;
+        text-decoration: none;
+    }
+</style>
+  <title>
+    CSE-Files
+  </title>
 </head>
 
 <body>
   <br><br><br>
-  <div  class="container-5" align=center>
-    <table class="resources-table-5" align=center style="width:90%;">
-        <tr>
-            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">3rd Semester FIles</p>
-        </tr>
-        <tr>
-            <td>
-               <a href="https://drive.google.com/drive/folders/1aBzwwuvyk43b1nuIvY_5Ala0K_f8pQ-k?usp=drive_link">S03 Notes</a>
-            </td>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link">S03 Books</a>
-            </td>
-            <td>
-                 <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link">S03 Classroom Files</a>
-            </td>
-            <td>
-                <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link">S03 Outlines</a>
-            </td>
-            <td>
-              <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link">S03 Questions</a>
-            </td>
-        </tr>
-    </table>
+  <div class="container-5">
+    <p class="highlights">3rd Semester Files</p>
+    <div class="resources-grid">
+        <div class="resource-link">
+            <a href="https://drive.google.com/drive/folders/1aBzwwuvyk43b1nuIvY_5Ala0K_f8pQ-k?usp=drive_link">
+                S03 Notes
+            </a>
+        </div>
+        <div class="resource-link">
+            <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link">
+                S03 Books
+            </a>
+        </div>
+        <div class="resource-link">
+            <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link">
+                S03 Classroom Files
+            </a>
+        </div>
+        <div class="resource-link">
+            <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link">
+                S03 Outlines
+            </a>
+        </div>
+        <div class="resource-link">
+            <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link">
+                S03 Questions
+            </a>
+        </div>
+    </div>
 </div>
 
   <div align=center>
-    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a></div>
+    <p id=" bottom" align=center><a style="color: #8c8c8c;" href="../CSE-Files.html">Go back to CSE-Files</a>
+  </div>
 </body>
 
 </html>
