--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -73,6 +73,7 @@
 </head>
 
 <body>
+  <!-- Replaced the table layout with a CSS Grid structure Removed unnecessary table rows and cells Used a single-column grid since all items should stack vertically Simplified the CSS structure and removed redundant styles Added proper spacing and margins Removed inline styles and deprecated HTML attributes Ensured consistent width and centering of elements Removed unnecessary line breaks at the top of the body The page will now: Display consistently on all devices Match the styling of your other pages Have proper spacing between elements Be more maintainable due to simplified structure -->
   <br><br><br>
   <div class="container-5">
     <p class="highlights">3rd Semester Files</p>
