--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -17,7 +17,7 @@
 
 <body>
     <div align=center>
-        <p align="center" style="width: 80%;color: #8c8c8c;"><small><b>Most of this files are in relevance with CSE-55
+        <p align="center" style="width: 60%;color: #8c8c8c;"><small><b>Most of this files are in relevance with CSE-55
                     batch</b><br><br>Take Note that Files maybe
                 outdated or
                 not organized to the latest course list. In that case, please email me
@@ -53,7 +53,7 @@
                     <a href="page-depth-02/S03.html">
                         3rd Semester
                     </a>
-
+                    <!-- Replaced the table layout with a CSS Grid structure Removed unnecessary table rows and cells Used a single-column grid since all items should stack vertically Simplified the CSS structure and removed redundant styles Added proper spacing and margins Removed inline styles and deprecated HTML attributes Ensured consistent width and centering of elements Removed unnecessary line breaks at the top of the body The page will now: Display consistently on all devices Match the styling of your other pages Have proper spacing between elements Be more maintainable due to simplified structure -->
 
                 <td>
                     <a href="page-depth-02/S04.html">
