added tob and bottom bar to every page

--- a/page-depth-01/page-depth-02/S01.html
+++ b/page-depth-01/page-depth-02/S01.html
@@ -80,6 +80,32 @@
 <body>
 
     <!-- Replaced the table layout with CSS Grid Used grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)) to create a responsive grid that automatically adjusts based on screen size Added proper spacing and margins between elements Improved the container sizing using the min() function Removed inline styles and deprecated HTML attributes (like align) Added proper hover states and transitions for better interactivity Made the back link more consistent with the overall design -->
+<!-- TOP BAR -->
+
+<div class="topnav-1">
+    <a class="active-1" href="page-depth-01/Tutorials.html">
+        <small>Resources<br>Tutorials</small>
+    </a>
+    <a class="active-1" href="page-depth-01/References.html">
+        <small>References<br>(updates)</small>
+    </a>
+    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+        <small>Coding<br>Blogs</small>
+    </a>
+</div>
+
+
+  <!-- BOTTOM BAR "navbar" -->
+
+  <div style="padding-left:16px">
+</div>
+<div class="navbar-5">
+  <font size="24"></font>
+  <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+  </font>
+
+</div>
+<!-- ----------------------------------------------------------------------- -->
 
 
     <div class="container-5">
