--- a/page-depth-01/CSE-Files.html
+++ b/page-depth-01/CSE-Files.html
@@ -16,6 +16,35 @@
 </head>
 
 <body>
+<!-- TOP BAR -->
+
+<div class="topnav-1">
+    <a class="active-1" href="page-depth-01/Tutorials.html">
+        <small>Resources<br>Tutorials</small>
+    </a>
+    <a class="active-1" href="page-depth-01/References.html">
+        <small>References<br>(updates)</small>
+    </a>
+    <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+        <small>Coding<br>Blogs</small>
+    </a>
+</div>
+
+
+  <!-- BOTTOM BAR "navbar" -->
+
+  <div style="padding-left:16px">
+</div>
+<div class="navbar-5">
+  <font size="24"></font>
+  <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+  </font>
+
+</div>
+<!-- ----------------------------------------------------------------------- -->
+
+
+
     <div align=center>
         <p align="center" style="width: 60%;color: #8c8c8c;"><small><b>Most of this files are in relevance with CSE-55
                     batch</b><br><br>Take Note that Files maybe
