--- a/page-depth-01/page-depth-02/S06.html
+++ b/page-depth-01/page-depth-02/S06.html
@@ -10,6 +10,32 @@
 </head>
 
 <body>
+<!-- TOP BAR -->
+
+<div class="topnav-1">
+  <a class="active-1" href="page-depth-01/Tutorials.html">
+      <small>Resources<br>Tutorials</small>
+  </a>
+  <a class="active-1" href="page-depth-01/References.html">
+      <small>References<br>(updates)</small>
+  </a>
+  <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+      <small>Coding<br>Blogs</small>
+  </a>
+</div>
+
+
+<!-- BOTTOM BAR "navbar" -->
+
+<div style="padding-left:16px">
+</div>
+<div class="navbar-5">
+<font size="24"></font>
+<p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+</font>
+
+</div>
+<!-- ----------------------------------------------------------------------- -->
 
   <br><br><br>
   <div  class="container-5" align=center>
