--- a/page-depth-01/page-depth-02/S07.html
+++ b/page-depth-01/page-depth-02/S07.html
@@ -10,11 +10,38 @@
 </head>
 
 <body>
+  <!-- TOP BAR -->
+
+<div class="topnav-1">
+  <a class="active-1" href="page-depth-01/Tutorials.html">
+      <small>Resources<br>Tutorials</small>
+  </a>
+  <a class="active-1" href="page-depth-01/References.html">
+      <small>References<br>(updates)</small>
+  </a>
+  <a class="active-1" href="https://b1tranger-coding.blogspot.com/">
+      <small>Coding<br>Blogs</small>
+  </a>
+</div>
+
+
+<!-- BOTTOM BAR "navbar" -->
+
+<div style="padding-left:16px">
+</div>
+<div class="navbar-5">
+<font size="24"></font>
+<p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
+</font>
+
+</div>
+<!-- ----------------------------------------------------------------------- -->
+
   <br><br><br>
   <div  class="container-5" align=center>
     <table class="resources-table-5" align=center style="width:90%;">
         <tr>
-            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">1st Semester FIles</p>
+            <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">7th Semester FIles</p>
         </tr>
         <tr>
             <td>
